--- a/pyFoamParameterStudyExample/cavity/system/fvSchemes.template
+++ b/pyFoamParameterStudyExample/cavity/system/fvSchemes.template
@@ -15,6 +15,8 @@ FoamFile
 }
 // * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * //
 
+#include "../../schemeAlias"
+
 ddtSchemes
 {
     default         Euler;
@@ -24,7 +26,7 @@ gradSchemes
 {
     default         Gauss linear;
     grad(p)         Gauss linear;
-    grad(U)         Gauss linear;
+    grad(U)         $|-gradScheme-|;  
 }
 
 divSchemes
