Fix: grad(p) instead of grad(U)

--- a/pyFoamParameterStudyExample/cavity/system/fvSchemes.template
+++ b/pyFoamParameterStudyExample/cavity/system/fvSchemes.template
@@ -24,9 +24,7 @@ ddtSchemes
 
 gradSchemes
 {
-    default         Gauss linear;
-    grad(p)         Gauss linear;
-    grad(U)         $|-gradScheme-|;  
+    grad(p)         $|-gradScheme-|;
 }
 
 divSchemes
